Adding editing functionality for basic trip information

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -12,3 +12,13 @@
 .icon-block .material-icons {
 	font-size: inherit;
 }
+.title {
+    text-align: center;
+}
+.title h1 {
+    display: inline-block;
+}
+
+.title a {
+  margin-left: 20px;
+}
