--- a/src/main/resources/templates/trip.html
+++ b/src/main/resources/templates/trip.html
@@ -29,9 +29,10 @@
   <div class="section no-pad-bot" id="index-banner">
     <div class="container">
       <br><br>
-      <h1 class="header center orange-text" th:text="${trip.title}" >
-      </h1>
-      
+      <div class="title">
+      <h1 class="header center orange-text" th:text="${trip.title}" ></h1>
+      <a th:href="@{/trip/} + ${trip.id} + @{/edit}" class="waves-effect waves-light btn-small">Edit</a>
+       </div>
       <div class="row center">
         <h5 th:text="${trip.description}" class="header col s12 light"></h5>
       </div>
