Added materialize datepicker in the edit trip form

--- a/src/main/resources/templates/edit-trip.html
+++ b/src/main/resources/templates/edit-trip.html
@@ -40,14 +40,14 @@
           <span th:if="${#fields.hasErrors('title')}" th:errors="*{title}"></span>  
         </div>
         <div class="input-field col s6">
-          <input placeholder="Start Date" id="start" type="text" class="validate" th:field="*{start}">
+          <input placeholder="Start Date" id="start" type="text" class="validate datepicker" th:field="*{start}">
           <label for="start">Start date</label>
           <span th:if="${#fields.hasErrors('start')}" th:errors="*{start}"></span>  
         </div>
       </div>
       <div class="row">
         <div class="input-field col s6">
-          <input placeholder="End Date" id="end" type="text" class="validate" th:field="*{end}">
+          <input placeholder="End Date" id="end" type="text" class="validate datepicker" th:field="*{end}">
           <label for="end">End date</label>
           <span th:if="${#fields.hasErrors('end')}" th:errors="*{end}"></span>  
         </div>
