--- a/src/main/resources/templates/trip.html
+++ b/src/main/resources/templates/trip.html
@@ -34,6 +34,7 @@
       
       <div class="row center">
         <h5 th:text="${trip.description}" class="header col s12 light"></h5>
+        <p th:text="${trip.notes}" class="header col s12 light"></p>
       </div>
       
       <!-- Fixed action button -->
