--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -31,7 +31,7 @@
         <h5 class="header col s12 light">A modern responsive front-end for planning Trip reservations and itineraries,</h5>
       </div>
       <div class="row center">
-        <a href="#" id="download-button" class="btn-large waves-effect waves-light orange">Get Started</a>
+        <a href="#trips-header" id="download-button" class="btn-large waves-effect waves-light orange">Get Started</a>
       </div>
       <br><br>
 
@@ -42,7 +42,7 @@
   <div class="container">
 	 <div class="row">
         <div class="col s10 offset-s1">   
-		 <h3 class="header">Trips</h3>
+		 <h3 id="trips-header" class="header">Trips</h3>
 		 <div class="section">
 		 	
 		    <ul class="collection">
