Added code to add accomodations to a trip

--- a/src/main/resources/templates/trip.html
+++ b/src/main/resources/templates/trip.html
@@ -87,6 +87,7 @@
 	          <h4 class="header">
 		          <span data-target="modal1" class="btn-floating green"><i class="material-icons">hotel</i></span>
 		          Accomodations
+		          <a class="btn-floating btn-medium waves-effect waves-light red right" th:href="@{'/trip/' + ${trip.id} + '/accommodation/add' }"><i class="material-icons">add</i></a>
 	          </h4>
 		      <br>
 		      <ul class="collapsible">
