added ability to delete trip
Includes some UI updates.
Important note:
When deleting trip, html styling seems to break when reloading page. Needs fix.

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -22,3 +22,18 @@
 .title a {
   margin-left: 20px;
 }
+#triplist a {
+  display: block;
+  color: black;
+}
+
+#triplist a i {
+  color: grey;
+  position: absolute;
+  top: -10px;
+  right: -10px;
+}
+
+#triplist:hover {
+  background-color: rgb(96, 209, 224);
+}
