some gui additions
Adjusted some buttons, but they shift when browser is not full screen. Needs fixing.
Added "days until start of trip" function to Trip page. Can be moved/adjusted as desired.

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -33,7 +33,46 @@
   top: -10px;
   right: -10px;
 }
+#titlecontainer {
+  width: 100px;
+  height: 100px;
+  position: relative;
+}
 
 #triplist:hover {
   background-color: rgb(96, 209, 224);
+}
+
+.icons {
+  position: relative;
+  right: -115px;
+}
+
+.iconsright {
+  position: relative;
+  left: 28px;
+}
+
+.iconsright .editicon {
+  position: absolute;
+  right: 30px;
+}
+
+.icons .editicon {
+  position: absolute;
+  right: 30px;
+}
+
+#editbutton, .remain {
+  position: absolute;
+  top: 0px;
+  right: -80px;
+}
+#editbutton {
+  top: 5px;
+}
+
+.remain {
+  z-index: 20;
+  top: -50px;
 }
