--- a/src/main/resources/templates/add-reservation.html
+++ b/src/main/resources/templates/add-reservation.html
@@ -51,16 +51,32 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="input-field col s6">
+                        <div class="input-field col s4">
                             <input id="confirmation" type="text" class="validate" th:field="*{confirmation}">
                             <label for="confirmation">Confirmation</label>
                             <span th:if="${#fields.hasErrors('confirmation')}" th:errors="*{confirmation}"></span>
                         </div>
-                        <div class="input-field col s6">
+                        <div class="input-field col s4">
                             <input id="price" type="number" step="0.01" class="validate" th:field="*{price}">
                             <label for="price">Price</label>
                             <span th:if="${#fields.hasErrors('price')}" th:errors="*{price}"></span>
                         </div>
+               
+                        <div class="input-field col s4">
+                            <select th:field="*{type}">
+                                <option value="" enabled selected>Choose your option</option>
+                                <option value="Train">Train</option>
+                                <option value="Ferry">Ferry</option>
+                                <option value="Bus">Bus</option>
+                                <option value="Museum">Museum</option>
+                                <option value="Other">Other</option>
+                            </select>
+                            <label>Type</label>
+                            <span th:if="${#fields.hasErrors('type')}" th:errors="*{type}"></span>
+                        </div>
+
+
+              
                     </div>
 
                     <div class="row">
