--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -68,26 +68,28 @@
       <div class="row">
         <div class="col l6 s12">
           <h5 class="white-text">Company Bio</h5>
-          <p class="grey-text text-lighten-4">We are a team of college students working on this project like it's our full time job. Any amount would help support and continue development on this project and is greatly appreciated.</p>
+          <p class="grey-text text-lighten-4">GruntMeister 5000 is a team of five 3rd and 4th year students that are trying to build a nice travel planner.</p>
 
 
         </div>
         <div class="col l3 s12">
-          <h5 class="white-text">Settings</h5>
+          <h5 class="white-text">Team</h5>
           <ul>
-            <li><a class="white-text" href="#!">Link 1</a></li>
-            <li><a class="white-text" href="#!">Link 2</a></li>
-            <li><a class="white-text" href="#!">Link 3</a></li>
-            <li><a class="white-text" href="#!">Link 4</a></li>
+            <li><a class="white-text" href="#!">Maryse Arseneau</a></li>
+            <li><a class="white-text" href="#!">Jennifer Firsoff</a></li>
+            <li><a class="white-text" href="#!">Shekhar Dewan</a></li>
+            <li><a class="white-text" href="#!">Joshua Cookson</a></li>
+            <li><a class="white-text" href="#!">Isaac Lee</a></li>
           </ul>
         </div>
         <div class="col l3 s12">
-          <h5 class="white-text">Connect</h5>
+          <h5 class="white-text">email</h5>
           <ul>
-            <li><a class="white-text" href="#!">Link 1</a></li>
-            <li><a class="white-text" href="#!">Link 2</a></li>
-            <li><a class="white-text" href="#!">Link 3</a></li>
-            <li><a class="white-text" href="#!">Link 4</a></li>
+            <li><a class="white-text" href="#!">mgarseneau@mta.ca</a></li>
+            <li><a class="white-text" href="#!">jsfirsoff@mta.ca</a></li>
+            <li><a class="white-text" href="#!">sdewan@mta.ca</a></li>
+            <li><a class="white-text" href="#!">jacookson@mta.ca</a></li>
+            <li><a class="white-text" href="#!">ilee@mta.ca</a></li>
           </ul>
         </div>
       </div>
