Add Trip function
added ability to add trips. added button to main trip page.

--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -42,7 +42,8 @@
   <div class="container">
 	 <div class="row">
         <div class="col s10 offset-s1">   
-		 <h3 id="trips-header" class="header">Trips</h3>
+		 <h3 id="trips-header" class="header">Trips 
+		 <a th:href="@{/add}" class="btn-floating red"><i class="material-icons">add</i></a></h3>
 		 <div class="section">
 		 	
 		    <ul class="collection">
